syntax = "proto3";
 
package mapreduce;
 
service Master {
  rpc WorkStream(stream WorkerMsg) returns (stream MasterMsg);
}
 
message WorkerMsg {
  oneof msg {
    Register register = 1;
    TaskResult result = 2;
    Heartbeat heartbeat = 3;
  }
}
 
message MasterMsg {
  oneof msg {
    Task task = 1;
    Cancel cancel = 2;
  }
}
 
message Register {
  string worker_id = 1;
  uint32 slots = 2;
}
 
message Heartbeat {
  uint32 free_slots = 1;
}
 
message Task {
  string task_id = 1;
  bytes payload = 2;
}
 
message TaskResult {
  string task_id = 1;
  bytes payload = 2;
}
 
message Cancel {
  string task_id = 1;
}